--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body class ='darkness'>
   <button class="begin_rave">CLICK TO RAVE!</button>
+  <button class="end_rave hidden">end this rave :(</button>
   <div id="kitchen" class="hidden">
     <h1 class="animated infinite wobble">KITCHEN RAVE!!</h1>
     <p class="animated infinite bounce">Kitchen rave!!</p>
