--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/styles.css"> 
 </head>
 
-<body class ='darkness'>
+<body class ='darkness'>  
   <button class="begin_rave">CLICK TO RAVE!</button>
   <div id="kitchen" class="hidden">
     <h1 class="animated infinite wobble">KITCHEN RAVE!!</h1>
     <p class="animated infinite bounce">Kitchen rave!!</p>
     <p class="animated infinite shake">Kitchen rave!!</p>
     <p class="animated infinite flash">Kitchen rave!!</p>
-    <img src="http://images.clipartpanda.com/average-clipart-average-kitchen.svg" alt="Lamp" width="300" height="200">  
+    <img src="http://images.clipartpanda.com/average-clipart-average-kitchen.svg" alt="Lamp" width="300" height="200">
+    <div class="habib_container">
+      <div class="beautiful_habib">
+      </div>
+    </div>
   </div>
   <button class="end_rave hidden">end this rave :(</button>
 </body>
