--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class ='darkness'>  
   <button class="begin_rave">CLICK TO RAVE!</button>
-  <div id="kitchen" class="hidden">
+  <div class="kitchen hidden">
     <h1 class="animated infinite wobble">KITCHEN RAVE!!</h1>
     <p class="animated infinite bounce">Kitchen rave!!</p>
     <p class="animated infinite shake">Kitchen rave!!</p>
